<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.Update_avaliability">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:scrollbarStyle="insideInset">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:theme="@style/AppTheme"
                android:orientation="vertical">




                <AutoCompleteTextView
                    android:id="@+id/from"
                    android:textColor="@color/gen_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/from" />

                <AutoCompleteTextView
                    android:id="@+id/to"
                    android:textColor="@color/gen_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/to" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"
                    android:focusable="false"

                    android:editable="false"
                    app:met_floatingLabel="highlight"
                    app:met_errorColor="@color/darkWhite"
                    app:met_primaryColor="@color/gen_black"
                    app:met_clearButton="true"/>
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/time"
                    android:focusable="false"
                    android:editable="false"
                    app:met_floatingLabel="highlight"
                    app:met_errorColor="@color/darkWhite"
                    app:met_primaryColor="@color/gen_black"
                    app:met_clearButton="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cartype"
                    style="@style/fonts"
                    android:layout_marginTop="@dimen/card_margin"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/cartype"
                    android:layout_marginTop="@dimen/card_margin"></Spinner>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service"
                    style="@style/fonts"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/card_margin"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/service"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/card_margin"></Spinner>
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/comment"
                    app:met_floatingLabel="highlight"
                    app:met_errorColor="@color/darkWhite"
                    app:met_primaryColor="@color/gen_black"
                    app:met_clearButton="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/communication"
                    style="@style/fonts"
                    android:layout_marginTop="@dimen/card_margin"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/communicationgroup"
                    android:layout_marginTop="@dimen/card_margin">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Chat"
                        android:textColor="@color/gen_black"
                        android:id="@+id/chat"></RadioButton>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Call"
                        android:textColor="@color/gen_black"
                        android:layout_marginLeft="@dimen/card_margin"
                        android:id="@+id/call"></RadioButton>

                </RadioGroup>




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/updateavaliability"
                        android:text="@string/updateavaliability"
                        android:layout_marginRight="5dp"
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:textSize="15sp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/remove"
                        android:text="remove"
                        android:layout_marginLeft="5dp"
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:textSize="15sp" />
                </LinearLayout>




            </LinearLayout>

        </ScrollView>


    </RelativeLayout>

</FrameLayout>