<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        app:cardCornerRadius="15dp"
        android:id="@+id/card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:gravity="center"
            android:background="#ffffff">

            <AutoCompleteTextView
                android:id="@+id/from"
                android:textColor="@color/gen_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextTheme"
                android:hint="@string/from" />

            <AutoCompleteTextView
                android:id="@+id/to"
                android:textColor="@color/gen_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextTheme"
                android:hint="@string/to" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="date"
                android:theme="@style/EditTextTheme"
                android:textColor="@color/gen_black"
                android:id="@+id/date"
                android:focusable="false"
                android:editable="false">
            </EditText>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/search"
                android:text="@string/search"
                style="@style/AppTheme.RoundedCornerDarkMaterialButton"
                android:textSize="15sp" />



        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>