<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backg"
    tools:context=".Fragment.Change_password">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:scrollbarStyle="insideInset">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:layout_gravity="center"
                android:theme="@style/AppTheme"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Change Password"
                    android:textColor="@color/gen_black"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:fontFamily="@font/blacklist"
                    android:layout_marginTop="@dimen/card_margin"/>


                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/oldpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/oldpassword"
                    app:met_floatingLabel="highlight"
                    app:met_iconLeft="@drawable/lock"
                    app:met_errorColor="@color/darkWhite"
                    app:met_primaryColor="@color/colorAccent"
                    app:met_clearButton="true"
                    android:inputType="textPassword"/>
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/newpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/newpassword"
                    app:met_floatingLabel="highlight"
                    app:met_iconLeft="@drawable/lock"
                    app:met_errorColor="@color/darkWhite"
                    app:met_primaryColor="@color/colorAccent"
                    app:met_clearButton="true"
                    android:inputType="textPassword"/>
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/confirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmpassword"
                    app:met_floatingLabel="highlight"
                    app:met_iconLeft="@drawable/lock"
                    app:met_errorColor="@color/darkWhite"
                    app:met_primaryColor="@color/colorAccent"
                    app:met_clearButton="true"
                    android:inputType="textPassword"/>




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/changepassword"
                        android:text="@string/changepassword"
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:textSize="15sp" />

                </LinearLayout>




            </LinearLayout>

        </ScrollView>


    </RelativeLayout>

</FrameLayout>