<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/backg"
    tools:context=".Activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideInset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:theme="@style/AppTheme"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryText"
                android:textSize="50sp"
                android:id="@+id/appname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:fontFamily="@font/blacklist"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/areyou"
                android:layout_marginLeft="@dimen/materialize_screen_edge"
                style="@style/fonts"
                android:visibility="gone"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@id/radiogroup"
                android:visibility="gone">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Travel Partner"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:id="@+id/travelpartner"></RadioButton>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Driver"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:id="@+id/driver"></RadioButton>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pessenger"
                    android:visibility="gone"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:id="@+id/pessenger"></RadioButton>

            </RadioGroup>
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Mobile Number"
                app:met_iconLeft="@android:drawable/stat_sys_phone_call"
                app:met_floatingLabel="highlight"
                app:met_baseColor="@color/gen_black"
                app:met_errorColor="#FF0801"
                app:met_clearButton="true"
                app:met_primaryColor="@color/gen_black"
                android:inputType="number"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                app:met_iconLeft="@drawable/lock"
                app:met_floatingLabel="highlight"
                android:inputType="textPassword"
                app:met_errorColor="#FE0000"
                app:met_baseColor="@color/gen_black"
                app:met_primaryColor="@color/gen_black"
                app:met_clearButton="true"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_button"
                    android:layout_margin="5dp"
                    android:text="@string/login"
                    style="@style/AppTheme.RoundedCornerMaterialButton" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/forgot_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:text="@string/forgot"
                    android:textStyle="bold"
                    style="@style/fonts"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="|"
                    style="@style/fonts"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:id="@+id/register_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/fonts"
                    android:textColor="@color/colorPrimaryText"
                    android:textStyle="bold"
                    android:text="@string/register_now"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>